@@ -85,6 +85,7 @@ compatible libraries
 The following libraries are under GPL:
 - frei0r
 - libcdio
+- librubberband
 - libutvideo
 - libvidstab
 - libx264
